fixed nav gap and margin

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -34,8 +34,9 @@
 .navlist {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 30px;
     margin-top: 30px;
+    margin-left: 20px;
 }
 
 .navlist li a{
